k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: alramz-ingress
  namespace: alramz-platform
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: data-validation.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: data-validation-service
                port:
                  number: 8080
    - host: notification.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: alramz-notification-service
                port:
                  number: 8082
    - host: seq.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: seq
                port:
                  number: 80
